--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "academia",
-  "version": "1.0.0",
-  "description": "Academic Planner",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Academia",
-  "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "ejs": "^3.0.1",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "mongoose": "^5.9.3",
-    "node-async-loop": "^1.2.2",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
-  }
+    "name": "academia",
+    "version": "1.0.0",
+    "description": "Academic Planner",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js"
+    },
+    "author": "Academia",
+    "license": "MIT",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "ejs": "^3.0.1",
+        "express": "^4.17.1",
+        "express-session": "^1.17.0",
+        "mongoose": "^5.9.3",
+        "node-async-loop": "^1.2.2",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^6.0.1"
+    }
 }
